# mars-cs-nrf54l

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  cog.toml  pr-body-issue41.md  typos.toml  west.yml
.github/workflows/: ci.yml  docs.yml  release.yml  version-bump.yml
boards/: 1_path_1_local.conf  2_path_1_local.conf  2_path_2_local.conf  4_path_1_local.conf  4_path_2_local.conf  4_path_4_local.conf  dm_nrf54l15_cpuapp.overlay  ezurio_bl54l15u_nrf54l15_cpuapp.overlay  fanstel_bm15c_nrf54l15_cpuapp.overlay  inline_pct_initiator.conf  inline_pct_reflector.conf  inline_pct_shared.conf  minew_me54be01.conf  minew_me54be01_nrf54l15_cpuapp.overlay  nrf54l15dk_nrf54l15_cpuapp.overlay  nrf54l15tag.conf  nrf54l15tag_nrf54l15_cpuapp.overlay  uart20_p1_13_p1_14.dtsi  ublox_nrf54l15_cpuapp.overlay
ci/: build.sh  changelog-remote.tera  common.sh
common/: CMakeLists.txt  Kconfig  addr_utils.c  addr_utils.h  antenna.c  antenna.h  ble_callbacks.c  ble_callbacks.h  ble_scanning.c  ble_scanning.h  cs_initiator.c  cs_initiator.h  cs_pct.h  cs_step_parse.c  cs_step_parse.h  rust_callbacks.c  rust_ffi_types.h  subevent.c  subevent.h
docs/: architecture.md  build-from-source.md  contributing.md  flash-quickstart.md  hardware.md
initiator/: CMakeLists.txt  CMakePresets.json  Kconfig  central.overlay  pm.yml  prj.conf  sample.yaml
initiator/src/: main.c  serialize.c  serialize.h
reflector/: CMakeLists.txt  CMakePresets.json  Kconfig  prj.conf  sample.yaml
reflector/src/: main.c
scripts/: bump-ncs.sh  check-docs.sh  check-ncs-version.sh  install-toolchain.sh  ncs-version-lib.sh
